--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
 .venv
+
+__pycache__
+
+# *** Application ***
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# *** Server ***
+
+# Datasets
+dataset.zip
+dataset
